--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -4,13 +4,14 @@
   align-items: center;
   background-color: #2e7d32;
   color: white;
-  padding: 1rem 2rem;
+  padding: 1rem 5%;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   width: 100%;
   position: fixed; 
   top: 0;
   left: 0;
   z-index: 1000;
+  box-sizing: border-box;
 }
 
 .navbar-brand h2 {
