--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -2,15 +2,24 @@
   background-color: #1a1a1a;
   color: #b0b0b0;
   padding: 40px 20px 10px;
-  margin-top: 50px; 
+  margin-top: 50px;
   border-top: 3px solid #2e7d32;
+
+  /* Full Width */
+  width: 100vw;          
+  position: relative;    
+  left: 50%;             
+  right: 50%;
+  margin-left: -50vw;    
+  margin-right: -50vw;   
+  box-sizing: border-box; 
 }
 
 .footer-content {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap; 
-  max-width: 1100px;
+  max-width: 1100px; 
   margin: 0 auto;
   gap: 30px;
 }
